--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
-            align-items: center;
             min-height: 100vh;
             margin: 0;
             background: linear-gradient(135deg, #ff7e5f, #feb47b);
             color: #fff;
             text-align: center;
+			background-image:url("background.jpg");
+			background-repeat:no-repeat;
+			background-size:cover;
         }
 
         .countdown-container {
@@ -22,6 +24,8 @@
             padding: 20px 40px;
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+			height: 150px;
+			margin-top: 100px;
         }
 
         .countdown {
