--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;
             min-height: 100vh;
             margin: 0;
             background: linear-gradient(135deg, #ff7e5f, #feb47b);
@@ -26,6 +25,7 @@
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 			height: 150px;
 			margin-top: 100px;
+			margin-left: 100px;
         }
 
         .countdown {
