--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="countdown-container">
-		<div id="fireworks-container"></div>
         <h1>Countdown to Lunar New Year</h1>
         <div class="countdown">
             <div>
@@ -30,9 +29,6 @@
             </div>
         </div>
     </div>
-
-    <script>
-
-    </script>
+	<canvas id="fireworksCanvas"></canvas>
 </body>
 </html>
